--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>webpack Patterns</title>
   </head>
-  <body>
-    <div id="root" class="_temp"></div>
+  <body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
+    <div id="root"></div>
   </body>
 </html>
