관리자 등록시 타입 수정중

--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,8 @@
     <script src="/gpms/vendor/tinymce/5.0.3/tinymce.min.js"></script>
 </head>
 <body>
+<script>
+    window.gpmsain = '18112004';
+</script>
 <div id="root"></div>
 </body>
