--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 <script>
-    window.gpmsain = '18112004';
+    window.gpmsain = '09052008';
+    window.gpmsain_s = '18112004';
+    window.gpmsain_a = '09052008';
+    window.gpmsain_p = '10052017';
 </script>
 <div id="root"></div>
 </body>
