--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,20 @@
 </head>
 <body>
 <script>
-    window.gpmsain = '18112004';
-
+    window.gpmsain = '10052017';
 
     window.gpmsain_s = '18112004';
     window.gpmsain_a = '09052008';
     window.gpmsain_p = '10052017';
+
+    window.roleTest = 1;
+  
+    window.roleClientAdmin = 1;
+    window.roleUserAdmin = 1;
+    window.roleDesktopAdmin = 1;
+    window.roleNoticeAdmin = 1;
+
+
 </script>
 <div id="root"></div>
 </body>
