--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>GPMS v1.2</title>
+    <title>GPMS v1.x</title>
     <script src="/gpms/vendor/tinymce/5.0.3/tinymce.min.js"></script>
 </head>
 <body>
