--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>GPMS v1.x</title>
 </head>
 <body>
@@ -10,14 +11,18 @@
     window.gpmsain_s = '18112004';
     window.gpmsain_a = '09052008';
     window.gpmsain_p = '10052017';
+    window.gpmsain_u = '10052018';
 
-    window.roleTest = 1;
+    window.roleTest = 0;
   
     window.roleClientAdmin = 1;
     window.roleUserAdmin = 1;
     window.roleDesktopAdmin = 1;
     window.roleNoticeAdmin = 1;
+    window.rolePortableAdmin = 1;
+    window.rolePortableUser = 1;
 
+    window.usePortable = 0;
 
 </script>
 <div id="root"></div>
